--- a/jargon-file-plantilla/jargon-file.html
+++ b/jargon-file-plantilla/jargon-file.html
@@ -6,49 +6,54 @@
 </head>
 <style>
 .background {
-
+ background-color:rgb(128 199 230) ;
 }
-<style>
+.background2 {
+background-color:rgb(51 158 204) ;  
+}
+</style>
 
 <body style="background-color:rgb(204 222 230) ; font-family: sans-serif;">
   <header>
    <h1 style="text-align: center; text-transform: uppercase; font-size:300%"><u>The jargon file</u></h1>
   </header>
-  <h1>AFAIK</h1>
+  <h1 class="background2">AFAIK</h1>
 
   Abreviatura de As Far As I Know ["por lo que yo sé"]. AFAIK sugiere que el autor sabe que su conocimiento es limitado. Existe la variante AFAICT [As Far As I Can Tell, "Por lo que yo puedo decir"] que sugiere que el autor cree tener conocimientos suficientes sobre el tema, pero que no se pueden emitir opiniones concluyentes.
 
-  <h1>BSOD</h1>
+  <h1 class="background2">BSOD</h1>
 
   Abreviatura de Blue Screen of Death ["pantalla azul de la muerte"]. Proviene de una expresión anterior ["pantalla negra de la muerte"], pero mucho más popular. Se refiere a la pantalla azul que muestra Windows cuando deja de funcionar, por culpa de una aplicación o del propio sistema operativo. En esa pantalla suelen aparecer códigos hexadecimales, con fines seguramente decorativos. Como prueba de la popularidad del término, sirva el siguiente poema del concurso de Haikus Salon:
 
-  Windows NT se ha colgado
+  <blockquote>
+  <p style="font-style: oblique;">Windows NT se ha colgado</p>
 
-  Soy la pantalla azul de la muerte
+  <p style="font-style: oblique;">Soy la pantalla azul de la muerte</p>
 
-  Nadie oirá tus gritos
+  <p style="font-style: oblique;">Nadie oirá tus gritos</p>
+ </blockquote>
 
-  <h1>FAQ</h1>
+  <h1 class="background2">FAQ</h1>
 
   Abreviatura de Frequently Asked Question ["pregunta planteada a menudo"]. Se refiere a las preguntas que se plantean una y otra vez en listas de correo, foros, etc, pero también se refiere a los documentos que recopilan ese tipo de preguntas. Hace años, este tipo de documentos se enviaban periódicamente en los grupos de noticias (newsgroups) para evitar la repetición innecesaria de las mismas preguntas. Posteriormente, este tipo de documentos (organizados mediante preguntas y respuestas) se incorporaron también a los sitios web para ofrecer información a los visitantes.
 
-  <h1>FUD</h1>
+  <h1 class="background2">FUD</h1>
 
   Abreviatura de Fear, Uncertainty and Doubt ["miedo, incertidumbre y duda"]. Expresión creada por Gene Amdhal tras abandonar IBM para fundar su propia empresa: "FUD es el miedo, la incertidumbre y la duda que los vendedores de IBM inculcan en la mente de los clientes que estén considerando la compra de productos de otras empresas". Los productos de IBM serían seguros y fiables, mientras que los de otras empresas supondrían una compra muy arriesgada. En los años 90, este término se asoció a menudo con Microsoft y, en general, con las técnicas de propaganda comercial basadas en la desinformación.
 
-  <h1>GIYF</h1>
+  <h1 class="background2">GIYF</h1>
 
   Abreviatura de Google Is Your Friend ["Google es tu amigo"]. Se emplea para sugerir a quien ha planteado una pregunta que la respuesta puede encontrarse usando un buscador, en vez de pedir ayuda a un humano.
 
-  <h1>IANAL</h1>
+  <h1 class="background2">IANAL</h1>
 
   Abreviatura de I Am Not A Lawyer ["no soy abogado"]. Se utiliza antes de dar un consejo legal, para evitar responsabilidades.
 
-  <h1>IMHO</h1>
+  <h1 class="background2">IMHO</h1>
 
   Abreviatura de In My Humble Opinion ["en mi humilde opinión]. Se utiliza antes de dar una opinión. Existen variantes como IMNSHO [In My Not-So-Humble Opinion, "en mi no tan humilde opinión"] o IMAO [In My Arrogant Opinion, "en mi arrogante opinión"].
  
-  <h1>Estilos de sangrado</h1>
+  <h1 class="background2">Estilos de sangrado</h1>
 
   Reglas para hacer el código más legible, mediante su sangrado, espaciado y colocación de las llaves ({}). Los cuatro estilos de sangrado más antiguos del lenguaje de programación C, heredados en otros lenguajes, son:
 
@@ -72,11 +77,12 @@
   <h2 class="background" style="color:white ;">Estilo Whitesmiths</h2>
 
   Es el estilo utilizado en los ejemplos de uno de los primeros compiladores comerciales de C, Whitesmiths C.
-
+<div>
   if (&lt;cond&gt;)
   {
   &lt;body&gt;
   }
+</div>
 
   <h2 class="background" style="color:white ;">Estilo GNU</h2>
 
@@ -87,12 +93,9 @@
   &lt;body&gt;
   }
 
-  <h1>RTFM</h1>
+  <h1 class="background2">RTFM</h1>
 
   Abreviatura de Read The Fucking Manual ["lea el p*** manual"]. Usado por expertos para expresar con rudeza que no deben ser molestados con preguntas triviales. Usado también por novatos para indicar que han intentado encontrar la respuesta por sí mismos antes de preguntar a otros.
 
-  Definiciones extraidas de The Jargon File version 4.4.7, por Eric S. Raymond
-
-  Última modificación de esta página: 14 de octubre de 2016
 </body>
 </html>
