jargon file culminado

--- a/jargon-file-plantilla/jargon-file.html
+++ b/jargon-file-plantilla/jargon-file.html
@@ -11,6 +11,11 @@
 .background2 {
 background-color:rgb(51 158 204) ;  
 }
+pre {
+  background-color: white;
+  font-weight: bold;
+  font-size: 1rem;
+}
 </style>
 
 <body style="background-color:rgb(204 222 230) ; font-family: sans-serif;">
@@ -60,39 +65,48 @@ background-color:rgb(51 158 204) ;
   <h2 class="background" style="color:white ;">Estilo K&R</h2>
 
   Es el estilo utilizado en el libro sobre programación en C escrito por Kernighan y Ritchie y utilizado también en el kernel de Linux (obra de Ritchie y Thompson).
-
-  if (&lt;cond&gt;) {
-  &lt;body&gt;
-  }
+<p>
+  <pre>
+    if (&lt;cond&gt;) {
+    &lt;body&gt;
+    }</pre>
+  
+  </p>
 
   <h2 class="background" style="color:white ;">Estilo Allman</h2>
 
   Es el estilo utilizado por Eric Allman, creador de muchas utilidades BSD.
-
-  if (&lt;cond&gt;)
-  {
-  &lt;body&gt;
-  }
-
+<p>
+  <pre>
+    if (&lt;cond&gt;)
+    {
+    &lt;body&gt;
+    }</pre>
+  
+</p>
   <h2 class="background" style="color:white ;">Estilo Whitesmiths</h2>
 
   Es el estilo utilizado en los ejemplos de uno de los primeros compiladores comerciales de C, Whitesmiths C.
-<div>
-  if (&lt;cond&gt;)
-  {
-  &lt;body&gt;
-  }
-</div>
+<p>
+  <pre>
+    if (&lt;cond&gt;)
+    {
+    &lt;body&gt;
+    }</pre>
+  
+</p>
 
   <h2 class="background" style="color:white ;">Estilo GNU</h2>
 
   Es el estilo utilizado en el editor EMACS y en el código creado por la Free Software Foundation.
-
-  if (&lt;cond&gt;)
-  {
-  &lt;body&gt;
-  }
-
+<p>
+  <pre>
+    if (&lt;cond&gt;)
+    {
+    &lt;body&gt;
+    }</pre>
+  
+</p>
   <h1 class="background2">RTFM</h1>
 
   Abreviatura de Read The Fucking Manual ["lea el p*** manual"]. Usado por expertos para expresar con rudeza que no deben ser molestados con preguntas triviales. Usado también por novatos para indicar que han intentado encontrar la respuesta por sí mismos antes de preguntar a otros.
