falta cv limpiar jargon file

--- a/jargon-file-plantilla/jargon-file.html
+++ b/jargon-file-plantilla/jargon-file.html
@@ -3,19 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>The Jargon File</title>
+  <link rel="stylesheet"; href="style.css">
+  
 </head>
 <style>
-.background {
- background-color:rgb(128 199 230) ;
-}
-.background2 {
-background-color:rgb(51 158 204) ;  
-}
-pre {
-  background-color: white;
-  font-weight: bold;
-  font-size: 1rem;
-}
+
 </style>
 
 <body style="background-color:rgb(204 222 230) ; font-family: sans-serif;">
