--- a/curriculum-vitae-plantilla/curriculum-vitae.html
+++ b/curriculum-vitae-plantilla/curriculum-vitae.html
@@ -2,11 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Sin título. Escribe tu nombre. Ejercicios. Páginas web HTML y hojas de estilo CSS. Bartolomé Sintes Marco. www.mclibre.org</title>
+  <link rel="stylesheet"; href="style.css">
+  <title>Atanagildo Aguirre Pacheco</title>
 </head>
 
 <body>
-  Currículum Vitae de Atanagildo Aguirre Pacheco
+ <h1>Currículum Vitae de Atanagildo Aguirre Pacheco</h1>
+
 
   Este es un ejemplo de currículum vitae. Cualquier parecido con la realidad es pura coincidencia. Este currículum cuenta con pocos apartados para que el ejercicio se pueda hacer rápidamente. En un ejercicio posterior se puede ver un ejemplo de currículum vitae más completo.
 
