--- a/curriculum-vitae-plantilla/curriculum-vitae.html
+++ b/curriculum-vitae-plantilla/curriculum-vitae.html
@@ -3,39 +3,48 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet"; href="style.css">
+  <link rel="icon" type="image/x-icon" href="/curriculum-vitae-plantilla/6614677.png">
   <title>Atanagildo Aguirre Pacheco</title>
 </head>
 
 <body>
- <h1>Currículum Vitae de Atanagildo Aguirre Pacheco</h1>
+ <h1><u>Currículum Vitae de Atanagildo Aguirre Pacheco</u></h1>
+
+ <main>
+  <div>
+  <p class="background">Este es un ejemplo de currículum vitae. Cualquier parecido con la realidad es pura coincidencia. Este currículum cuenta con pocos apartados para que el ejercicio se pueda hacer rápidamente. En un ejercicio 
+    posterior se puede ver un ejemplo de currículum vitae más completo.</p>
+
+ <h2>Datos personales</h2>
+ <ul class="background">
+   <li>Nombre y Apellidos: Atanagildo Aguirre Pacheco</li>
+   <li>Dirección: C./ Toledo, nº 13, p. 7 - 46027 Valencia</li>
+   <li>D.N.I.: 27.182.818-S</li> 
+  </ul>
 
 
-  Este es un ejemplo de currículum vitae. Cualquier parecido con la realidad es pura coincidencia. Este currículum cuenta con pocos apartados para que el ejercicio se pueda hacer rápidamente. En un ejercicio posterior se puede ver un ejemplo de currículum vitae más completo.
+<h2>Educación y formación</h2>
+ <ul class="background">
+  <li>2013-2015: Ciclo Formativo de Grado Superior Desarrollo de Aplicaciones Multiplataforma. Patraix Institute of Technology (Patraix).</li>
+  <li>2015-2017: Ciclo Formativo de Grado Superior Administración de Sistemas Informáticos en Red (modalidad semipresencial). Instituto de Enseñanza Secundaria Abastos (Valencia).</li>
+ </ul>
+  
+<h2>Capacidades y aptitudes personales</h2>
 
-  Datos personales
+<h3>Idiomas</h3>
+<ul class="background" >
+  <li>Inglés: Nivel Alto. Título nivel C1, por la Escuela Oficial de Idiomas de Valencia.</li>
+  <li>Valenciano: Nivel Medio. Certificado de Coneixements de Valencià Grau Mitjà, por la Junta Qualificadora de Coneixements de Valencià. Conselleria d'Educació, Investigació, Cultura i Esport.
+  </div>
+  </li>
+</ul>
 
-  Nombre y Apellidos: Atanagildo Aguirre Pacheco
 
-  Dirección: C./ Toledo, nº 13, p. 7 - 46027 Valencia
+  
+  <footer class="background">Autor: Atanagildo Aguirre Pacheco</footer>
+  <footer class="background">Última modificación de esta página: 14 de octubre de 2016</footer>
+</main>
+ 
 
-  D.N.I.: 27.182.818-S
-
-  Educación y formación
-
-  2015-2017: Ciclo Formativo de Grado Superior Administración de Sistemas Informáticos en Red (modalidad semipresencial). Instituto de Enseñanza Secundaria Abastos (Valencia).
-
-  2013-2015: Ciclo Formativo de Grado Superior Desarrollo de Aplicaciones Multiplataforma. Patraix Institute of Technology (Patraix).
-
-  Capacidades y aptitudes personales
-
-  Idiomas
-
-  Inglés: Nivel Alto. Título nivel C1, por la Escuela Oficial de Idiomas de Valencia.
-
-  Valenciano: Nivel Medio. Certificado de Coneixements de Valencià Grau Mitjà, por la Junta Qualificadora de Coneixements de Valencià. Conselleria d'Educació, Investigació, Cultura i Esport.
-
-  Autor: Atanagildo Aguirre Pacheco
-
-  Última modificación de esta página: 14 de octubre de 2016
 </body>
 </html>
