--- a/greguerias-1-plantilla/greguerias-1.html
+++ b/greguerias-1-plantilla/greguerias-1.html
@@ -2,26 +2,27 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Sin título. Escriba su nombre. Ejercicios. Páginas web HTML y hojas de estilo CSS. Bartolomé Sintes Marco. www.mclibre.org</title>
+  <link rel="stylesheet"; href="style.css">
+  <title>Greguerias</title>
 </head>
 
 <body>
-  Greguerías de Ramón Gómez de la Serna
+  <h1>Greguerías de Ramón Gómez de la Serna</h1>
 
-  Cuando anuncian por el altavoz que se ha perdido un niño, siempre pienso que ese niño soy yo.
+  <p class="nino">Cuando anuncian por el altavoz que se ha perdido un niño, siempre pienso que ese niño soy yo.</p>
 
-  Las golondrinas son pájaros vestidos de etiqueta.
+  <p class="golondrinas">Las golondrinas son pájaros vestidos de etiqueta.</p>
 
-  El escritor quiere escribir su mentira y escribe su verdad.
+  <p class="escribir"> El escritor quiere escribir su mentira y escribe su verdad.</p>
 
-  El niño grita: "¡No vale!"... "¡Dos contra uno!", y no sabe que toda la vida es eso: dos contra uno.
+  <p class="nino">El niño grita: "¡No vale!"... "¡Dos contra uno!", y no sabe que toda la vida es eso: dos contra uno.</p>
 
-  El libro es un pájaro con más de cien alas para volar.
+  <p class="escribir">El libro es un pájaro con más de cien alas para volar.</p>
 
-  Los ceros son los huevos de los que salieron las demás cifras.
+  <p class="numeros">Los ceros son los huevos de los que salieron las demás cifras.</p>
 
-  Al callarse la chicharra de pronto, parece que ha habido una avería eléctrica.
+  <p class="golondrinas">Al callarse la chicharra de pronto, parece que ha habido una avería eléctrica.</p>
 
-  El 6 es el número que va a tener familia.
+  <p class="numeros"> El 6 es el número que va a tener familia.</p>
 </body>
 </html>
