--- a/emoji-peliculas-plantilla/emoji-peliculas.html
+++ b/emoji-peliculas-plantilla/emoji-peliculas.html
@@ -2,17 +2,29 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Sin título. Escriba su nombre. Ejercicios. Páginas web HTML y hojas de estilo CSS. Bartolomé Sintes Marco. www.mclibre.org</title>
+  <link rel="stylesheet"; href="style.css">
+  <link rel="icon" type="image/x-icon" href="/emoji-peliculas-plantilla/pngwing.com.png">
+  <title>Adivinanzas</title>
 </head>
 
 <body>
-  Adivina, adivinanza ...
+  <h1>Adivina, adivinanza...</h1>
 
-  ¿Sabrías decir los títulos de estas películas?
+  <h2>¿Sabrías decir los títulos de estas películas?</h2>
 
-  El planeta de los simios
-
+  
+<details>
+  <summary><span style='font-size:50px;'>&#127758&#128053&#128053&#128053</span></summary>
+  <p>El planeta de los simios</p>
+</details>
+<details>
+  <summary><span style=</summary>
   Cazafantasmas
+</details>
+
+ 
+
+
 
   Cuatro bodas y un funeral
 
