antes de modificar margenes sonetos

--- a/sonetos-lope-plantilla/sonetos-lope.html
+++ b/sonetos-lope-plantilla/sonetos-lope.html
@@ -2,12 +2,14 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Sin título. Escriba su nombre</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Sonetos de amor</title>
 </head>
 
 <body>
-  Sonetos de amor de Lope de Vega (1562 - 1635)
-
+  <h1>Sonetos de amor de Lope de Vega (1562 - 1635)</h1>
+  <main>
+  <pre class="first-brown">    
   Ya no quiero más bien que sólo amaros,
   ni más vida, Lucinda, que ofreceros
   la que me dais, cuando merezco veros,
@@ -17,21 +19,22 @@
   para ser venturoso, conoceros;
   para admirar el mundo, engrandeceros,
   y para ser Eróstrato, abrasaros.
-
+  
   La pluma y lengua, respondiendo a coros,
   quieren al cielo espléndido subiros,
   donde están los espíritus más puros;
-
+ 
   que entre tales riquezas y tesoros,
   mis lágrimas, mis versos, mis suspiros
-  de olvido y tiempo vivirán seguros.
+  de olvido y tiempo vivirán seguros.</pre>
+<br>
 
-
+  <pre class="second-rose">
   Ir y quedarse, y con quedar partirse,
   partir sin alma, y ir con alma ajena,
   oír la dulce voz de una sirena
   y no poder del árbol desasirse;
-
+ 
   arder como la vela y consumirse
   haciendo torres sobre tierna arena;
   caer de un cielo, y ser demonio en pena,
@@ -43,14 +46,15 @@
 
   creer sospechas y negar verdades,
   es lo que llaman en el mundo ausencia,
-  fuego en el alma y en la vida infierno.
+  fuego en el alma y en la vida infierno.</pre>
+<br>
 
-
+  <pre class="third-eye">
   Perderá de los cielos la belleza
   el ordinario curso, eterno y fuerte;
   la confusión, que todo lo pervierte,
   dará a las cosas su primer rudeza.
-
+  
   Juntaránse el descanso y la pobreza;
   será el alma inmortal sujeta a muerte;
   hará los rostros todos de una suerte,
@@ -59,17 +63,18 @@
   Los humores del hombre, reducidos
   a un mismo fin, se abrazarán concordes;
   dará la noche luz y el oro enojos.
-
+  
   Y quedarán en paz eterna unidos
   los elementos, hasta aquí discordes,
-  antes de que deje de adorar tus ojos.
+  antes de que deje de adorar tus ojos.</pre>
+<br>
 
-
+  <pre class="fourth-blue">
   Desmayarse, atreverse, estar furioso,
   áspero, tierno, liberal, esquivo,
   alentado, mortal, difunto, vivo,
   leal, traidor, cobarde y animoso;
-
+  
   no hallar fuera del bien centro y reposo,
   mostrarse alegre, triste, humilde, altivo,
   enojado, valiente, fugitivo,
@@ -78,10 +83,14 @@
   huir el rostro al claro desengaño,
   beber veneno por licor suave,
   olvidar el provecho, amar el daño;
-
+  
   creer que un cielo en un infierno cabe,
   dar la vida y el alma a un desengaño;
-  esto es amor, quien lo probó lo sabe.
+  esto es amor, quien lo probó lo sabe.</pre>
+
+
+ </p>
+</main>
 
 </body>
 </html>
