--- a/chesterton-1-plantilla/chesterton-1.html
+++ b/chesterton-1-plantilla/chesterton-1.html
@@ -2,15 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Sin título. Escriba su nombre. Ejercicios. Páginas web HTML y hojas de estilo CSS. Bartolomé Sintes Marco. www.mclibre.org</title>
+  <link rel="stylesheet" href="style.css"
+  <title></title>
 </head>
 
 <body>
-  Citas de Gilbert Keith Chesterton
+  <header>
+  <h1>Citas de Gilbert Keith Chesterton</h1>
 
   Gilbert Keith Chesterton (Londres, 29 de mayo de 1874 - Beaconsfield, 14 de junio de 1936), más conocido como G. K. Chesterton, fue un escritor y periodista británico de inicios del siglo XX, calificado a menudo como el "príncipe de las paradojas". Cultivó, entre otros géneros, el ensayo, la narración, la biografía, la lírica, el periodismo y el libro de viajes.
 
-  Su personaje más famoso es el Padre Brown, un sacerdote católico de apariencia ingenua, cuya agudeza psicológica hace de él un detective formidable, y que protagonizó más de cincuenta historias reunidas en cinco volúmenes, publicados entre 1911 y 1935.
+  Su personaje más famoso es el Padre Brown, un sacerdote católico de apariencia ingenua, cuya agudeza psicológica hace de él un detective formidable, y que protagonizó más de cincuenta historias reunidas en cinco volúmenes, publicados entre 1911 y 1935.</header>
 
   Capitalismo
 
