--- a/listas-1-plantilla/listas-1.html
+++ b/listas-1-plantilla/listas-1.html
@@ -2,17 +2,29 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Sin título. Escriba su nombre. Ejercicios. Páginas web HTML y hojas de estilo CSS. Bartolomé Sintes Marco. www.mclibre.org</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Listas ejercicio</title>
 </head>
 
 <body>
-  Lista 1
-  Punto 1
-  Punto 2
-  Punto 3, más largo
-  Punto 4
-  Punto 5
-
+  <h1>Diseño de listas</h1>
+  <h2>Lista 1</h2>
+  <ul>
+    <li>Punto 1</li>
+    <li>Punto 2</li>
+    <li>Punto 3, más largo</li>
+    <li>Punto 4</li>
+    <li>Punto 5</li>
+  </ul>
+  
+  
+  <ul>
+    <li>Punto 1</li>
+    <li>Punto 2</li>
+    <li>Punto 3, más largo</li>
+    <li>Punto 4</li>
+    <li>Punto 5</li>
+  </ul>
   Lista 5
   Inicio
   Añadir
