--- a/listas-1-plantilla/listas-1.html
+++ b/listas-1-plantilla/listas-1.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Diseño de listas</h1>
   <h2>Lista 1</h2>
-  <ul>
+  <ul class="list1">
     <li>Punto 1</li>
     <li>Punto 2</li>
     <li>Punto 3, más largo</li>
@@ -17,8 +17,9 @@
     <li>Punto 5</li>
   </ul>
   
-  
-  <ul>
+
+  <h2>Listas 2</h2>
+  <ul class="list2">
     <li>Punto 1</li>
     <li>Punto 2</li>
     <li>Punto 3, más largo</li>
