--- a/software-libre-3-plantilla/software-libre-3.html
+++ b/software-libre-3-plantilla/software-libre-3.html
@@ -14,59 +14,59 @@
   <h1>Software libre de escritorio</h1>
 
   <p class="style2"><a href="/software-libre-3-plantilla/software-libre-3.html">Escritorio</a><br>
-    <a href=internet.html></a></br></p>
+    <a href=internet.html>internet</a></br></p>
 
   <br>
   <br>
   <main>
     <div>
-      <h2 class="subtitle_background">7-zip</h2>
+      <h2>7-zip</h2>
 
-      <p class="margin-top">7-zip es un compresor/descompresor de archivos que maneja los formatos ZIP, RAR, CAB, GZIP, BZIP2 y TAR, así
+      <p>7-zip es un compresor/descompresor de archivos que maneja los formatos ZIP, RAR, CAB, GZIP, BZIP2 y TAR, así
         como un formato propio, 7z.</p>
 
-      <h2 class="subtitle_background">Audacity</h2>
+      <h2>Audacity</h2>
 
-      <p class="margin-top">Audacity es un editor de audio. Permite reproducir, grabar, editar, mezclar, aplicar efectos, etc.</p>
+      <p>Audacity es un editor de audio. Permite reproducir, grabar, editar, mezclar, aplicar efectos, etc.</p>
 
-      <h2 class="subtitle_background">GIMP</h2>
+      <h2>GIMP</h2>
 
-      <p class="margin-top">GIMP (GNU Image Manipulation Program) es un programa de retoque fotográfico y composición y edición de
+      <p>GIMP (GNU Image Manipulation Program) es un programa de retoque fotográfico y composición y edición de
         imágenes.</p>
 
-      <h2 class="subtitle_background">Inkscape</h2>
+      <h2>Inkscape</h2>
 
-      <p class="margin-top">
+      <p>
         Inkscape es un editor de gráficos vectoriales que utiliza el formato SVG y que también importa formatos como
         Postscript, EPS, JPEG, PNG, y TIFF y exporta en PNG y varios formatos vectoriales.
       </p>
 
-      <h2 class="subtitle_background">LibreOffice</h2>
+      <h2>LibreOffice</h2>
 
-      <p class="margin-top">
+      <p>
         LibreOffice es una suite ofimática completa compuesta de procesador de textos, hoja de cálculo, presentaciones,
         programa de dibujo, base de datos y editor de ecuaciones.
       </p>
 
-      <h2 class="subtitle_background">Scribus</h2>
+      <h2>Scribus</h2>
 
-      <p class="margin-top">Scribus es un programa de maquetación de documentos (en inglés, DeskTop Publishing o DTP).</p>
+      <p>Scribus es un programa de maquetación de documentos (en inglés, DeskTop Publishing o DTP).</p>
 
-      <h2 class="subtitle_background">ShareX</h2>
+      <h2>ShareX</h2>
 
-      <p class="margin-top">
+      <p>
         ShareX es un capturador de pantallas o vídeo capaz de capturar el escritorio completo, ventanas o diferentes
         figuras geométricas (rectángulos, círculos, etc.) y copiarlo al portapapeles, al disco duro o subirlo a sitios de
         Internet.
       </p>
 
-      <h2 class="subtitle_background">Sumatra PDF</h2>
+      <h2>Sumatra PDF</h2>
 
-      <p class="margin-top">Sumatra PDF es un visualizador de documentos PDF minimalista, que permite ver e imprimir los documentos PDF.</p>
+      <p>Sumatra PDF es un visualizador de documentos PDF minimalista, que permite ver e imprimir los documentos PDF.</p>
 
-      <h2 class="subtitle_background">VLC media player</h2>
+      <h2>VLC media player</h2>
 
-      <p class="margin-top">
+      <p>
         VideoLAN Media Player es un reproductor multimedia que reproduce numerosos formatos de audio y vídeo, así como
         DVDs, VCDs y varios protocolos de streaming. También puede utilizarse como servidor unicast o multicast en IPv4 o
         IPv6.
