--- a/software-libre-3-plantilla/internet.html
+++ b/software-libre-3-plantilla/internet.html
@@ -6,5 +6,37 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" ; href="style.css">
-
+  </head>
+<body>
   <title>Internet</title>
+
+  <h1>Internet</h1>
+
+  <p class="style2"><a href="/software-libre-3-plantilla/software-libre-3.html">Escritorio</a><br>
+    <a href=internet.html>internet</a></br></p>
+  <br>
+  <br>
+<main>
+ <div>
+  <h2>FileZilla</h2>
+
+  <p>FileZilla es un cliente de FTP.</p>
+
+  <h2>Firefox</h2>
+
+  <p>Firefox es un navegador web altamente personalizable y ampliable mediante los cientos de extensiones y temas disponibles.</p>
+
+  <h2>HTTrack</h2>
+
+  <p>HTTrack permite descargar sitios webs completos para su consulta offline.</p>
+
+  <h2>Pidgin</h2>
+
+  <p>Pidgin es un cliente de mensajería instantánea, compatible con las redes ICQ, IRC, Jabber, Gadu-Gadu, Zephyr y otras.</p>
+
+  <h2>Thunderbird</h2>
+
+  <p>Thunderbird es un cliente de correo de los creadores de Firefox. Incorpora multitud de características avanzadas y, de forma similar a Mozilla Firefox, puede personalizarse mediante temas y ampliar sus posibilidades mediante extensiones.</p>
+  
+</div>
+</body>
